--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.example.android.marsphotos"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -62,6 +62,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+
+    implementation "androidx.appcompat:appcompat-resources:1.5.0"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
