--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,10 +64,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 
+    //giving error without it
     implementation "androidx.appcompat:appcompat-resources:1.5.0"
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+//    implementation "com.squareup.retrofit2:retrofit:2.9.0"
     // Retrofit with Scalar Converter
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+//    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
+    //Retrofit with moshi converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    //Moshi lib :- JSON to Kotlin string convertor
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+
 }
