--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     //Moshi lib :- JSON to Kotlin string convertor
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
 
+    //Coil Library to display image
+    implementation 'io.coil-kt:coil:2.1.0'
+
 }
