--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
     implementation 'io.coil-kt:coil:2.1.0'
     implementation 'androidx.leanback:leanback:1.0.0'
 
+    //recycle view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
